[package]
name = "kook_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.30", features = ["sink"] }
reqwest = { version = "0.11.23", features = ["multipart", "native-tls-vendored", "json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = ["raw_value"] }
serde_repr = "0.1.18"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "macros", "time"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = "0.3.18"
